# Anwill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Anwill/: CMakeLists.txt
Anwill/res/shaders/OpenGL/: AwCircleBatch.glsl  AwQuadBatch.glsl  Font.glsl  GuiButton.glsl  GuiCircleButton.glsl  GuiCircleColor.glsl  GuiPrimitiveColor.glsl  GuiRectButton.glsl  GuiText.glsl  GuiTextButton.glsl  GuiTexture.glsl  GuiTooltip.glsl  GuiWindow.glsl
Anwill/src/: Anwill.h  CMakeLists.txt  EntryPoint.h
Anwill/src/core/: App.cpp  App.h  AppStats.h  Assert.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatDef.h  Timestamp.h  Window.cpp  Window.h
Anwill/src/ecs/: CMakeLists.txt  Component.cpp  Component.h  ComponentContainer.h  ComponentManager.h  DefaultComponents.h  Ecs.cpp  Ecs.h  EcsDef.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Anwill/src/events/: CMakeLists.txt  Event.cpp  Event.h  GuiEventHandler.cpp  GuiEventHandler.h  GuiEvents.cpp  GuiEvents.h  KeyEvents.h  MouseEvents.h  SystemEventHandler.cpp  SystemEventHandler.h  SystemEvents.cpp  SystemEvents.h  WindowEvents.h
Anwill/src/gfx/: BatchData2D.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Font.cpp  Font.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderMacros.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Anwill/src/gui/: CMakeLists.txt  Gui.cpp  Gui.h  GuiContainers.cpp  GuiContainers.h  GuiElements.cpp  GuiElements.h  GuiLayer.cpp  GuiLayer.h  GuiStyling.cpp  GuiStyling.h
Anwill/src/gui/containers/: CMakeLists.txt  GuiContainer.cpp  GuiContainer.h  GuiWindow.cpp  GuiWindow.h
Anwill/src/gui/elements/: CMakeLists.txt  GuiButton.cpp  GuiButton.h  GuiCheckbox.cpp  GuiCheckbox.h  GuiDropdown.cpp  GuiDropdown.h  GuiElement.cpp  GuiElement.h  GuiIcon.cpp  GuiIcon.h  GuiImage.cpp  GuiImage.h  GuiInputText.cpp  GuiInputText.h  GuiRadioButton.cpp  GuiRadioButton.h  GuiSlider.h  GuiText.cpp  GuiText.h  GuiTextButton.cpp  GuiTextButton.h  GuiTooltip.cpp  GuiTooltip.h
Anwill/src/gui/styles/: CMakeLists.txt  GuiStyling.cpp  GuiStyling.h
Anwill/src/imgui/: CMakeLists.txt  Imgui.cpp  Imgui.h  ImguiLayer.cpp  ImguiLayer.h
Anwill/src/math/: Algo.cpp  Algo.h  CMakeLists.txt  Mat4f.cpp  Mat4f.h  Math.cpp  Math.h  PLine2D.cpp  PLine2D.h  Vec2f.cpp  Vec2f.h  Vec3f.cpp  Vec3f.h
Anwill/src/physics/: CMakeLists.txt  Dynamics.cpp  Dynamics.h
Anwill/src/physics/collision/: CircleCollider.cpp  CircleCollider.h  Collider.h  Collision.cpp  Collision.h  PolygonCollider.cpp  PolygonCollider.h  RectangleCollider.cpp  RectangleCollider.h
Anwill/src/platform/: CMakeLists.txt  WinWindow.cpp  WinWindow.h
Anwill/src/platform/OpenGL/: CMakeLists.txt  OpenGLBase.cpp  OpenGLBase.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Anwill/src/platform/Windows/: CMakeLists.txt  WinInput.cpp  WinInput.h  WinKeyCodes.h  WinMouseCodes.h  WinTime.h  WinWindow.cpp  WinWindow.h  WinWindowOld.cpp  WinWindowOld.h
Anwill/src/utils/: CMakeLists.txt  FileIO.cpp  FileIO.h  FileReader.cpp  FileReader.h  Profiler.cpp  Profiler.h  Random.cpp  Random.h  Utils.cpp  Utils.h
Editor/: CMakeLists.txt
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Circle.glsl  CircleColor.glsl  Ellipse.glsl  FileIOTest.glsl  HelloTriangle.glsl  HelloUniform.glsl  QuadBatch.glsl  RectBorder.glsl  RectColor.glsl  RectTexture.glsl  TPS.glsl
Sandbox/assets/textfiles/: lorem_ipsum.txt
Sandbox/src/: CMakeLists.txt  EcsTestLayer.cpp  EcsTestLayer.h  Layer2D.cpp  Layer2D.h  Sandbox.cpp  TPS.cpp  TPS.h  TPSCalcs.cpp  TPSCalcs.h
Sandbox/src/SmallerProjects/TopDownShadow/: TPS.cpp  TPSCalcs.cpp  TPSCalcs.h
Sandbox/src/Tests/: MovingCameraBaseLayer.cpp
Sandbox/src/Tests/EcsTest/: EcsTestLayer.cpp
Sandbox/src/Tests/Gui/: GuiTest.cpp  GuiTest.h
Sandbox/src/Tests/Physics/collision/: CollisionRender.cpp
Sandbox/src/Tests/PhysicsTest/: PhyDelta.cpp  PhyDelta.h  PhyExist.cpp  PhyExist.h
Sandbox/src/Tests/Renderer/: BatchRendererHelloWorld.cpp  BatchRendererHelloWorld.h  FontHelloWorld.cpp  FontHelloWorld.h  RendererHelloWorld.cpp  SpriteAnimationTest.cpp  SpriteAnimationTest.h  TextureHelloWorld.cpp
Sandbox/src/base/: CMakeLists.txt  MovingCameraBaseLayer.cpp  MovingCameraBaseLayer.h  Sandbox.cpp  Sandbox.h  SandboxEventHandler.cpp  SandboxEventHandler.h  SandboxEvents.h  SandboxLayer.cpp  SandboxLayer.h
Sandbox/src/ecs/: CMakeLists.txt  EcsStressTest.cpp  EcsStressTest.h  EcsTestLayer.cpp
Sandbox/src/gui/: CMakeLists.txt  GuiTest.cpp  GuiTest.h
Sandbox/src/physics/: CMakeLists.txt
Sandbox/src/physics/arena/: ArenaRender.cpp  ArenaRender.h  ArenaTest.cpp  ArenaTest.h  CMakeLists.txt  SprinklerRender.cpp  SprinklerTest.cpp  SprinklerTest.h
Sandbox/src/physics/collision/: CollisionRender.cpp  CollisionRender.h
Sandbox/src/physics/dynamics/: CMakeLists.txt  DynamicsTest.cpp  DynamicsTest.h
Sandbox/src/physics/sprinkler/: CMakeLists.txt  CollisionRender.h  CollisionTest.cpp  SprinklerRender.cpp  SprinklerRender.h  SprinklerTest.cpp  SprinklerTest.h
Sandbox/src/renderer/: BatchRendererHelloWorld.cpp  BatchRendererHelloWorld.h  BatchRendererTest.cpp  BatchRendererTest.h  CMakeLists.txt  FontTest.cpp  FontTest.h  PrimitivesTest.cpp  PrimitivesTest.h  RendererHelloWorld  RendererHelloWorld.cpp  RendererHelloWorld.h  SpriteAnimationTest.cpp  SpriteAnimationTest.h  TextureHelloWorld.h  TextureTest.cpp  TextureTest.h
Sandbox/src/tps/: CMakeLists.txt  TPS.cpp  TPS.h  TPSCalcs.cpp  TPSCalcs.h
(+20 files in other folders)
